--- a/index.html
+++ b/index.html
@@ -19,18 +19,19 @@
                            debugUIEnabled: false;'> 
 
         <a-assets>
-            <a-asset-item id="cone-modelo" 
-                          src="https://cdn.glitch.global/40b7ed8c-5f85-49dd-afb5-d509594a8ac2/Cone_orange_animated.glb?v=1683214533662">
-            </a-asset-item>
-        </a-assets>
+    <a-asset-item id="robot-modelo" 
+                  src="https://threejs.org/examples/models/gltf/RobotExpressive/RobotExpressive.glb">
+    </a-asset-item>
+</a-assets>
 
-        <a-marker type='pattern' url='marker.patt'>
-            
-            <a-entity
-                gltf-model="#cone-modelo" 
-                scale="1 1 1"                 position="0 0 0"              animation-mixer="clip: *"     ></a-entity>
-
-        </a-marker>
+<a-marker ...>
+    <a-entity
+        gltf-model="#robot-modelo" 
+        scale="0.5 0.5 0.5" 
+        position="0 0.5 0" 
+        animation-mixer="clip: Dance" 
+    ></a-entity>
+</a-marker>
 
         <a-entity camera></a-entity>
 
