--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                            detectionMode: mono; 
                            patternRatio: 0.5; 
                            maxDetectionRate: 30; 
-                           debugUIEnabled: false;'> 
+                           debugUIEnabled: true;'> 
 
         <a-assets>
     <a-asset-item id="robot-modelo" 
