--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     
     <a-scene embedded arjs='sourceType: webcam; 
                            detectionMode: mono; 
-                           patternRatio: 0.5; 
+                           patternRatio: 0.9; 
                            maxDetectionRate: 30; 
                            debugUIEnabled: true;'> 
 
@@ -29,7 +29,7 @@
         gltf-model="#robot-modelo" 
         scale="0.5 0.5 0.5" 
         position="0 0.5 0" 
-        animation-mixer="clip: Dance" 
+        animation-mixer="clip: Idle" 
     ></a-entity>
 </a-marker>
 
