--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </a-asset-item>
 </a-assets>
 
-<a-marker ...>
+<a-marker preset='hiro'>
     <a-entity
         gltf-model="#robot-modelo" 
         scale="0.5 0.5 0.5" 
