--- a/index.html
+++ b/index.html
@@ -14,23 +14,24 @@
     
     <a-scene embedded arjs='sourceType: webcam; 
                            detectionMode: mono; 
-                           patternRatio: 0.5; 
+                           patternRatio: 0.9; 
                            maxDetectionRate: 30; 
-                           debugUIEnabled: false;'> 
+                           debugUIEnabled: true;'> 
 
         <a-assets>
-            <a-asset-item id="cone-modelo" 
-                          src="https://cdn.glitch.global/40b7ed8c-5f85-49dd-afb5-d509594a8ac2/Cone_orange_animated.glb?v=1683214533662">
-            </a-asset-item>
-        </a-assets>
+    <a-asset-item id="robot-modelo" 
+                  src="https://threejs.org/examples/models/gltf/RobotExpressive/RobotExpressive.glb">
+    </a-asset-item>
+</a-assets>
 
-        <a-marker type='pattern' url='marker.patt'>
-            
-            <a-entity
-                gltf-model="#cone-modelo" 
-                scale="1 1 1"                 position="0 0 0"              animation-mixer="clip: *"     ></a-entity>
-
-        </a-marker>
+<a-marker preset='hiro'>
+    <a-entity
+        gltf-model="#robot-modelo" 
+        scale="0.5 0.5 0.5" 
+        position="0 0.5 0" 
+        animation-mixer="clip: Idle" 
+    ></a-entity>
+</a-marker>
 
         <a-entity camera></a-entity>
 
