--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                        trackingMethod: best; 
                        debugUIEnabled: true;'>
 
-    <a-nft type='nft' url='[nome-base-da-imagem]' smooth="true" smoothCount="10" smoothTolerance=".01">
+    <a-nft type='nft' url='maker.png' smooth="true" smoothCount="10" smoothTolerance=".01">
         <a-entity
             gltf-model="#robot-modelo"
             scale="100 100 100"  position="0 0 0" 
