--- a/index.html
+++ b/index.html
@@ -21,17 +21,20 @@
     
     <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js"></script>
 
-    <a-scene embedded arjs='sourceType: webcam; 
-    detectionMode: mono; 
-    patternRatio: 0.9; debugUIEnabled: true;'> 
+<a-scene embedded arjs='sourceType: webcam; 
+                       trackingMethod: best; 
+                       debugUIEnabled: true;'>
 
-<a-assets>
-</a-assets>
+    <a-nft type='nft' url='marker' smooth="true" smoothCount="10" smoothTolerance=".01">
+        <a-entity
+            gltf-model="#robot-modelo"
+            scale="100 100 100"  position="0 0 0" 
+            animation-mixer="clip: Dance" 
+        ></a-entity>
+    </a-nft>
 
-<a-marker type='pattern' url='marker.patt'> 
-</a-marker>
+    <a-entity camera></a-entity>
 
-<a-entity camera></a-entity>
 </a-scene>
 </body>
 </html>
