--- a/index.html
+++ b/index.html
@@ -21,11 +21,10 @@
     
     <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js"></script>
 
-<a-scene embedded arjs='sourceType: webcam; 
-                       trackingMethod: best; 
+<a-scene embedded arjs='sourceType: webcam;  
                        debugUIEnabled: true;'>
 
-    <a-nft type='nft' url='marker' smooth="true" smoothCount="10" smoothTolerance=".01">
+    <a-nft type='nft' url='[nome-base-da-imagem]' smooth="true" smoothCount="10" smoothTolerance=".01">
         <a-entity
             gltf-model="#robot-modelo"
             scale="100 100 100"  position="0 0 0" 
